--- a/ruby-china-swift/Base.lproj/Main.storyboard
+++ b/ruby-china-swift/Base.lproj/Main.storyboard
@@ -1,25 +1,163 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="fF0-lB-Lbf">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item 2-->
+        <scene sceneID="7qB-8g-90o">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bpr-BS-E8O" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="cez-I3-NQ5"/>
+                        <viewControllerLayoutGuide type="bottom" id="XZn-7m-hJ8"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="scaleToFill" id="dYV-2D-2B3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="41D-GT-0FK"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rCA-3V-Zh3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="529" y="680"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9am-EI-JCd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="o0j-EZ-NXd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="D7U-bX-weM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mi7-ZQ-HQL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="272" y="-1457"/>
+        </scene>
+        <!--精帖-->
+        <scene sceneID="jzv-41-F6v">
+            <objects>
+                <viewController id="0Qw-SZ-26C" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cov-8x-vFK"/>
+                        <viewControllerLayoutGuide type="bottom" id="3x1-44-kq3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WZF-WW-Ija">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label精帖" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCr-it-u9c">
+                                <rect key="frame" x="122" y="77" width="76" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="精帖" image="ic_tab_topic" id="A3o-bU-F7b"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nff-Vt-zQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1055" y="-970"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="LFp-54-IXX">
+            <objects>
+                <viewController id="YuV-fl-I8K" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HzD-mh-7mg"/>
+                        <viewControllerLayoutGuide type="bottom" id="WeC-kQ-jfC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PjZ-7O-jZd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label 我的" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3G-Fu-hDU">
+                                <rect key="frame" x="120" y="101" width="80" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="我的" image="ic_tab_my" id="x1o-oI-L5R"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CQL-FM-O7Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1424" y="-1394"/>
+        </scene>
+        <!--社区-->
+        <scene sceneID="XdM-c8-Zlk">
+            <objects>
+                <viewController id="xqv-DF-gTr" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Avl-xv-6wh"/>
+                        <viewControllerLayoutGuide type="bottom" id="4qA-BE-oia"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qqp-Mb-shs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oRf-dh-0nT">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1Vc-ii-4sY">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Vc-ii-4sY" id="EOE-Az-TuF">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4qA-BE-oia" firstAttribute="top" secondItem="oRf-dh-0nT" secondAttribute="bottom" id="K8X-4Z-NxT"/>
+                            <constraint firstItem="oRf-dh-0nT" firstAttribute="top" secondItem="Qqp-Mb-shs" secondAttribute="topMargin" id="dqm-7n-dci"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="oRf-dh-0nT" secondAttribute="trailing" constant="-20" id="mxL-6F-D50"/>
+                            <constraint firstItem="oRf-dh-0nT" firstAttribute="leading" secondItem="Qqp-Mb-shs" secondAttribute="leadingMargin" constant="-20" id="sou-Zy-KJ9"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="社区" image="ic_tab_messages" id="ogY-iR-rGF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k5o-mI-26m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1424" y="-2022"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7Sn-8N-uiD">
+            <objects>
+                <tabBarController id="fF0-lB-Lbf" customClass="ViewController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="l8s-Yz-8MW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="0Qw-SZ-26C" kind="relationship" relationship="viewControllers" id="eqT-tb-WhV"/>
+                        <segue destination="xqv-DF-gTr" kind="relationship" relationship="viewControllers" id="A1O-Dl-6nh"/>
+                        <segue destination="YuV-fl-I8K" kind="relationship" relationship="viewControllers" id="r8N-ql-hQE"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TmH-m2-MPB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="884" y="-1708"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic_tab_messages" width="25" height="25"/>
+        <image name="ic_tab_my" width="25" height="25"/>
+        <image name="ic_tab_topic" width="25" height="25"/>
+    </resources>
 </document>
