--- a/ruby-china-swift/Base.lproj/Main.storyboard
+++ b/ruby-china-swift/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
         <!--精帖-->
         <scene sceneID="jzv-41-F6v">
             <objects>
-                <viewController id="0Qw-SZ-26C" sceneMemberID="viewController">
+                <viewController id="0Qw-SZ-26C" customClass="HomeController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cov-8x-vFK"/>
                         <viewControllerLayoutGuide type="bottom" id="3x1-44-kq3"/>
@@ -52,16 +52,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label精帖" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCr-it-u9c">
-                                <rect key="frame" x="122" y="77" width="76" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SxF-aZ-oxF">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3gR-ub-jek">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3gR-ub-jek" id="Tgv-DD-zID">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="SxF-aZ-oxF" secondAttribute="trailing" constant="-20" id="6pk-Ne-02Q"/>
+                            <constraint firstItem="SxF-aZ-oxF" firstAttribute="leading" secondItem="WZF-WW-Ija" secondAttribute="leadingMargin" constant="-20" id="a0O-f4-t3Y"/>
+                            <constraint firstItem="3x1-44-kq3" firstAttribute="top" secondItem="SxF-aZ-oxF" secondAttribute="bottom" id="emF-fk-8Q8"/>
+                            <constraint firstItem="SxF-aZ-oxF" firstAttribute="top" secondItem="WZF-WW-Ija" secondAttribute="topMargin" id="fMG-Jh-YWS"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="精帖" image="ic_tab_topic" id="A3o-bU-F7b"/>
+                    <connections>
+                        <outlet property="tableView" destination="SxF-aZ-oxF" id="l4X-2X-9TO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nff-Vt-zQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -97,7 +114,7 @@
         <!--社区-->
         <scene sceneID="XdM-c8-Zlk">
             <objects>
-                <viewController id="xqv-DF-gTr" sceneMemberID="viewController">
+                <viewController id="xqv-DF-gTr" customClass="TopicsController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Avl-xv-6wh"/>
                         <viewControllerLayoutGuide type="bottom" id="4qA-BE-oia"/>
@@ -106,7 +123,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oRf-dh-0nT">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oRf-dh-0nT" customClass="Top">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -130,6 +147,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="社区" image="ic_tab_messages" id="ogY-iR-rGF"/>
+                    <connections>
+                        <outlet property="tableView" destination="oRf-dh-0nT" id="UUc-xB-yk6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k5o-mI-26m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
