--- a/ruby-china-swift/Base.lproj/Main.storyboard
+++ b/ruby-china-swift/Base.lproj/Main.storyboard
@@ -6,41 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
-        <scene sceneID="7qB-8g-90o">
-            <objects>
-                <viewController id="bpr-BS-E8O" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="cez-I3-NQ5"/>
-                        <viewControllerLayoutGuide type="bottom" id="XZn-7m-hJ8"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="dYV-2D-2B3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="41D-GT-0FK"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rCA-3V-Zh3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="529" y="680"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="9am-EI-JCd">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="o0j-EZ-NXd" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="D7U-bX-weM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Mi7-ZQ-HQL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="272" y="-1457"/>
-        </scene>
-        <!--精帖-->
+        <!--Home Controller-->
         <scene sceneID="jzv-41-F6v">
             <objects>
                 <viewController id="0Qw-SZ-26C" customClass="HomeController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
@@ -57,7 +23,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3gR-ub-jek">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="92" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3gR-ub-jek" id="Tgv-DD-zID">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
@@ -72,17 +38,17 @@
                             <constraint firstAttribute="trailingMargin" secondItem="SxF-aZ-oxF" secondAttribute="trailing" constant="-20" id="6pk-Ne-02Q"/>
                             <constraint firstItem="SxF-aZ-oxF" firstAttribute="leading" secondItem="WZF-WW-Ija" secondAttribute="leadingMargin" constant="-20" id="a0O-f4-t3Y"/>
                             <constraint firstItem="3x1-44-kq3" firstAttribute="top" secondItem="SxF-aZ-oxF" secondAttribute="bottom" id="emF-fk-8Q8"/>
-                            <constraint firstItem="SxF-aZ-oxF" firstAttribute="top" secondItem="WZF-WW-Ija" secondAttribute="topMargin" constant="20" id="fMG-Jh-YWS"/>
+                            <constraint firstItem="SxF-aZ-oxF" firstAttribute="top" secondItem="WZF-WW-Ija" secondAttribute="topMargin" id="fMG-Jh-YWS"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="精帖" image="ic_tab_topic" id="A3o-bU-F7b"/>
+                    <navigationItem key="navigationItem" id="v7N-hb-FcB"/>
                     <connections>
                         <outlet property="tableView" destination="SxF-aZ-oxF" id="l4X-2X-9TO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nff-Vt-zQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1055" y="-970"/>
+            <point key="canvasLocation" x="1042" y="-250"/>
         </scene>
         <!--我的-->
         <scene sceneID="LFp-54-IXX">
@@ -109,9 +75,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CQL-FM-O7Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1424" y="-1394"/>
+            <point key="canvasLocation" x="1834" y="-1218"/>
         </scene>
-        <!--社区-->
+        <!--Topics Controller-->
         <scene sceneID="XdM-c8-Zlk">
             <objects>
                 <viewController id="xqv-DF-gTr" customClass="TopicsController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
@@ -128,7 +94,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1Vc-ii-4sY">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="92" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Vc-ii-4sY" id="EOE-Az-TuF">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
@@ -141,19 +107,52 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="4qA-BE-oia" firstAttribute="top" secondItem="oRf-dh-0nT" secondAttribute="bottom" id="K8X-4Z-NxT"/>
-                            <constraint firstItem="oRf-dh-0nT" firstAttribute="top" secondItem="Qqp-Mb-shs" secondAttribute="topMargin" constant="20" id="dqm-7n-dci"/>
+                            <constraint firstItem="oRf-dh-0nT" firstAttribute="top" secondItem="Qqp-Mb-shs" secondAttribute="topMargin" id="dqm-7n-dci"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oRf-dh-0nT" secondAttribute="trailing" constant="-20" id="mxL-6F-D50"/>
                             <constraint firstItem="oRf-dh-0nT" firstAttribute="leading" secondItem="Qqp-Mb-shs" secondAttribute="leadingMargin" constant="-20" id="sou-Zy-KJ9"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="社区" image="ic_tab_messages" id="ogY-iR-rGF"/>
+                    <navigationItem key="navigationItem" id="uyw-aH-uDe"/>
                     <connections>
                         <outlet property="tableView" destination="oRf-dh-0nT" id="UUc-xB-yk6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k5o-mI-26m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1424" y="-2022"/>
+            <point key="canvasLocation" x="1956" y="-2022"/>
+        </scene>
+        <!--Topic Detail Controller-->
+        <scene sceneID="5sL-BT-6ar">
+            <objects>
+                <viewController storyboardIdentifier="topicDetail" id="qLb-jV-2WO" customClass="TopicDetailController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OuR-Dg-rCX"/>
+                        <viewControllerLayoutGuide type="bottom" id="sZw-KA-5Q5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="USy-gT-fih">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7ct-DO-NUk">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7ct-DO-NUk" firstAttribute="leading" secondItem="USy-gT-fih" secondAttribute="leadingMargin" constant="-20" id="HpH-Ll-zAH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7ct-DO-NUk" secondAttribute="trailing" constant="-20" id="fWE-ke-QvN"/>
+                            <constraint firstItem="sZw-KA-5Q5" firstAttribute="top" secondItem="7ct-DO-NUk" secondAttribute="bottom" id="hkI-mA-dy5"/>
+                            <constraint firstItem="7ct-DO-NUk" firstAttribute="top" secondItem="USy-gT-fih" secondAttribute="topMargin" id="tMe-bm-T7B"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="7ct-DO-NUk" id="ivf-dn-JeE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cIm-PG-7Z8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2364" y="-2159"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="7Sn-8N-uiD">
@@ -165,14 +164,52 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="0Qw-SZ-26C" kind="relationship" relationship="viewControllers" id="eqT-tb-WhV"/>
-                        <segue destination="xqv-DF-gTr" kind="relationship" relationship="viewControllers" id="A1O-Dl-6nh"/>
+                        <segue destination="1qU-YU-e11" kind="relationship" relationship="viewControllers" id="eqT-tb-WhV"/>
+                        <segue destination="8l9-b1-Fen" kind="relationship" relationship="viewControllers" id="A1O-Dl-6nh"/>
                         <segue destination="YuV-fl-I8K" kind="relationship" relationship="viewControllers" id="r8N-ql-hQE"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TmH-m2-MPB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="884" y="-1708"/>
+        </scene>
+        <!--精帖-->
+        <scene sceneID="hi4-IM-Lsj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1qU-YU-e11" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="精帖" image="ic_tab_topic" id="A3o-bU-F7b"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="61w-my-DxS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0Qw-SZ-26C" kind="relationship" relationship="rootViewController" id="p7B-LX-uOn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VMn-TY-Q6h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="884" y="-1027"/>
+        </scene>
+        <!--社区-->
+        <scene sceneID="lg8-Wb-vb7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8l9-b1-Fen" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="社区" image="ic_tab_messages" id="ogY-iR-rGF"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Eln-Qq-jyw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xqv-DF-gTr" kind="relationship" relationship="rootViewController" id="aCJ-NJ-nEt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XLi-71-sxj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1424" y="-2022"/>
         </scene>
     </scenes>
     <resources>
