topic detail markdown render and table view cell

--- a/ruby-china-swift/Base.lproj/Main.storyboard
+++ b/ruby-china-swift/Base.lproj/Main.storyboard
@@ -18,31 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SxF-aZ-oxF">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SxF-aZ-oxF">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3gR-ub-jek">
-                                        <rect key="frame" x="0.0" y="92" width="320" height="55"/>
+                                        <rect key="frame" x="0.0" y="92" width="320" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3gR-ub-jek" id="Tgv-DD-zID">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="54.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="wk8-gO-j9j">
-                                        <rect key="frame" x="0.0" y="147" width="320" height="55"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wk8-gO-j9j" id="HVs-FC-lxq">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="54.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="sTk-i9-2rA">
-                                        <rect key="frame" x="0.0" y="202" width="320" height="55"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sTk-i9-2rA" id="hCX-M2-xg3">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="54.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -70,7 +54,7 @@
         <!--我的-->
         <scene sceneID="LFp-54-IXX">
             <objects>
-                <viewController id="YuV-fl-I8K" sceneMemberID="viewController">
+                <viewController id="YuV-fl-I8K" customClass="MyController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="HzD-mh-7mg"/>
                         <viewControllerLayoutGuide type="bottom" id="WeC-kQ-jfC"/>
@@ -80,7 +64,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label 我的" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3G-Fu-hDU">
-                                <rect key="frame" x="120" y="101" width="80" height="21"/>
+                                <rect key="frame" x="84" y="100" width="188" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -89,6 +73,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="我的" image="ic_tab_my" id="x1o-oI-L5R"/>
+                    <connections>
+                        <outlet property="labView" destination="M3G-Fu-hDU" id="wRU-R7-RR2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CQL-FM-O7Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -150,21 +137,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7ct-DO-NUk">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SAN-g3-T2y">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                            </webView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="VAT-gi-rIB">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VAT-gi-rIB" id="cAq-8x-1kt">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="7ct-DO-NUk" firstAttribute="leading" secondItem="USy-gT-fih" secondAttribute="leadingMargin" constant="-20" id="HpH-Ll-zAH"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7ct-DO-NUk" secondAttribute="trailing" constant="-20" id="fWE-ke-QvN"/>
-                            <constraint firstItem="sZw-KA-5Q5" firstAttribute="top" secondItem="7ct-DO-NUk" secondAttribute="bottom" id="hkI-mA-dy5"/>
-                            <constraint firstItem="7ct-DO-NUk" firstAttribute="top" secondItem="USy-gT-fih" secondAttribute="topMargin" id="tMe-bm-T7B"/>
+                            <constraint firstItem="sZw-KA-5Q5" firstAttribute="top" secondItem="SAN-g3-T2y" secondAttribute="bottom" id="3eH-aK-p5w"/>
+                            <constraint firstItem="SAN-g3-T2y" firstAttribute="top" secondItem="USy-gT-fih" secondAttribute="topMargin" id="RIX-Ff-FXk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="SAN-g3-T2y" secondAttribute="trailing" constant="-20" id="TaP-ZR-WDh"/>
+                            <constraint firstItem="SAN-g3-T2y" firstAttribute="leading" secondItem="USy-gT-fih" secondAttribute="leadingMargin" constant="-20" id="u2F-Sf-ohm"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="webView" destination="7ct-DO-NUk" id="ivf-dn-JeE"/>
+                        <outlet property="tableView" destination="SAN-g3-T2y" id="J1p-gW-tra"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cIm-PG-7Z8" userLabel="First Responder" sceneMemberID="firstResponder"/>
